2004-03-19  John Luke  <jluke@cfl.rr.com>

	* src/Main/Base/Gui/IProgressMonitor.cs:
	* src/Main/Base/Gui/CompletionDatabaseWizard/GenerateDatabase.cs:
	* src/Main/Base/Services/StatusBar/IStatusBarService.cs:
	* src/Main/Base/Services/StatusBar/DefaultStatusBarService.cs:
	* src/Main/Base/Commands/FileCommands.cs:
	* src/Main/Base/Gui/Components/StatusBar/SdStatusBar.cs:
	use double instead of casting to int everywhere
	and implement ProgressBar
	* src/Main/Base/Makefile.am: cleanup and undefine GTK and LINUX
	* *.cs: account for above

2004-03-19  Iñigo Illán <kodeport AT terra.es>
	* src/Main/Base/Commands/FileCommands.cs:
	ask if you want to really delete recent files/projects list.

2004-03-18  John Luke  <jluke@cfl.rr.com>

	* src/Main/Base/Gui/Pads/HelpBrowser/HelpViewer.cs:
	implement OnUrl event to show Urls in statusbar

2004-03-18  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* src/Main/Base/Gui/IWorkbench.cs: Added WorkbenchContext enum,
	Context property and ContextChanged event.

	* src/Main/Base/Gui/IWorkbenchLayout.cs: Added CurrentLayout
	and PadContentCollection properties.

	* src/Main/Base/Gui/Workbench/DefaultWorkbench.cs: Connect to the
	debugging service's StartedEvent, and switch workbench context
	whenever debugging is started or stopped.

	* src/Main/Base/Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: Added
	layout switching functionality.  Connect to the IWorkbench's new
	ContextChanged event and switch layouts when starting/stopping
	debug.  Provide a collection of valid content pads for the current
	workbench context.

	* src/Main/Base/Commands/MenuItemBuilders.cs: Take the collection
	of content pads from the layout.

2004-03-17	John BouAntoun  <jba-mono@optusnet.com.au>
	
	* src/Main/Base/Commands/MenuItemBuilders.cs:
	fixed external tool launching in correct WorkingDirectory
	and also made it not parse the tool command (bug 53311).
	Still need to fix prompt for arguments issue.

2004-03-15  John Luke  <jluke@cfl.rr.com>
	